# sep25_alt1_mle_ds_covid1

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  data.dvc  dvc.yaml  mypy.ini  pyproject.toml  streamlit01.py  streamlit_app.py  tox.ini
.dvc/: config
notebooks/: 01_balance_clases.ipynb  1.0_cay_eda.ipynb  1.0_ta_eda_.ipynb  1_0_eda_radiography.ipynb  1_0_eda_radiography_contraste.ipynb  1_0_eda_radiography_rodrigue.ipynb  1_1_audit_dataloader_output.ipynb  2_0_explore_test_preds.ipynb  3_0_model_explicability.ipynb
radiocovid-app/: pyproject.toml
radiocovid-app/src/radiocovid/app/: __init__.py  app.py  cli.py  client.py  config.py
radiocovid-app/tests/: conftest.py  test_app_imports.py  test_client.py
radiocovid-core/: pyproject.toml
radiocovid-core/src/radiocovid/core/: __init__.py  train.py
radiocovid-core/src/radiocovid/core/configs/: datamodule.yaml  eval.yaml  extras.yaml  paths.yaml  train.yaml  trainer.yaml
radiocovid-core/src/radiocovid/core/configs/callbacks/: all.yaml  early_stopping.yaml  exception_checkpoint.yaml  lr_monitor.yaml  model_checkpoint.yaml  model_summary.yaml  multiple.yaml  rich_progress_bar.yaml
radiocovid-core/src/radiocovid/core/configs/debug/: barebones.yaml  default.yaml  fast_dev_run.yaml  limit.yaml  overfit.yaml
radiocovid-core/src/radiocovid/core/configs/experiment/: best_dataaug_valscore_model.yaml  best_overft_valscore_model.yaml  default.yaml  overfit_batch.yaml  overfit_batch_regnety128gf.yaml  overfit_batch_resnet50.yaml  overfit_batch_vgg11.yaml  overfit_batch_vgg11bn.yaml  overfit_train_set_hpg.yaml  overfit_ts_hpg_resnet50.yaml  regnety128gf.yaml  resnet50.yaml  train_resnet50_best_hpg_params_full_overfit.yaml  train_resnet50_binary.yaml  train_resnet50_binary_2.yaml  vanilla.yaml  vgg11.yaml  vgg11bn.yaml
radiocovid-core/src/radiocovid/core/configs/hydra/: default.yaml
radiocovid-core/src/radiocovid/core/configs/loggers/: tensorboard.yaml  wandb.yaml
radiocovid-core/src/radiocovid/core/configs/module/: default.yaml  regnety128gf.yaml  resnet50.yaml  vanilla_model.yaml  vgg11.yaml
radiocovid-core/src/radiocovid/core/configs/module/loss/: cross_entropy.yaml  focal_loss.yaml
radiocovid-core/src/radiocovid/core/configs/module/metric/: fbeta_score.yaml
radiocovid-core/src/radiocovid/core/configs/module/optimizer/: adam.yaml  adamw.yaml  base_optimizer.yaml  sgd.yaml
radiocovid-core/src/radiocovid/core/configs/module/scheduler/: constant.yaml  cosine.yaml  cosine_wr.yaml  linear.yaml  multistep.yaml  sequential.yaml
radiocovid-core/src/radiocovid/core/configs/profiler/: advanced.yaml  pytorch.yaml  xla.yaml
radiocovid-core/src/radiocovid/core/configs/strategy/: auto.yaml  ddp.yaml  tpu.yaml
radiocovid-core/src/radiocovid/core/configs/tuner/: optuna.yaml
radiocovid-core/src/radiocovid/core/data/: __init__.py  datamodule.py  datasets.py  transforms.py
radiocovid-core/src/radiocovid/core/losses/: __init__.py  focal_loss.py
radiocovid-core/src/radiocovid/core/models/: __init__.py  nets.py  vanilla_model.py
radiocovid-core/src/radiocovid/core/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
radiocovid-core/tests/: conftest.py  test_imports.py  test_train.py
radiocovid-core/tests/data/: test_datamodule.py  test_datasets.py  test_transforms.py
radiocovid-core/tests/losses/: test_focal_loss.py
radiocovid-core/tests/utils/: test_instantiators.py  test_logging_utils.py  test_pylogger.py  test_rich_utils.py  test_utils.py
radiocovid-etl/: pyproject.toml
radiocovid-etl/src/radiocovid/etl/: __init__.py  clean.py  config.yaml  preprocessings.py  train_folder.py  utils.py
radiocovid-etl/src/radiocovid/etl/configs/: clean.yaml  config.yaml  train-folder.yaml
radiocovid-etl/tests/: conftest.py  test_imports.py  test_preprocessings.py  test_train_folder.py  test_utils.py
radiocovid-inference/: predict.py  pyproject.toml
radiocovid-inference/src/: wandb_download_ckpt.py
radiocovid-inference/src/radiocovid/inference/: __init__.py  api.py  checkpoints.py  config.py  predictor.py
radiocovid-inference/tests/: conftest.py  test_api.py  test_checkpoints.py  test_predict.py  test_predictor.py  test_wandb_download_ckpt.py
radiocovid-utils/: pyproject.toml
radiocovid-utils/src/radiocovid/utils/: __init__.py  common.py  pylogger.py
radiocovid-utils/src/radiocovid/utils/ml/: __init__.py  distributed.py  hydra_utils.py  instantiators.py  logging_utils.py  nn.py  rich_utils.py  seeding.py
radiocovid-utils/tests/: conftest.py  test_common.py  test_imports.py  test_pylogger.py
radiocovid-utils/tests/ml/: __init__.py  test_distributed.py  test_hydra_utils.py  test_instantiators.py  test_logging_utils.py  test_nn.py  test_rich_utils.py  test_seeding.py
remove_outliers/: main.py  remove_outliers.py
scripts_pull_weights/: check_wandb_access.py  temp_wandb_test.py  wandb_download_ckpt.py
simple_train/: dataset_check.py  train_with_radiocovid_dataset.py
src/balance/: balance_classes.py
src/radiocovid/models/: __init__.py  train.py
src/radiocovid/models/configs/: datamodule.yaml  paths.yaml  train.yaml
src/radiocovid/models/configs/callbacks/: early_stopping.yaml  multiple.yaml  rich_progress_bar.yaml
src/radiocovid/models/configs/debug/: default.yaml  fast_dev_run.yaml
src/radiocovid/models/configs/experiment/: default.yaml
src/radiocovid/models/configs/loggers/: multiple.yaml
src/radiocovid/models/configs/module/: default.yaml
src/radiocovid/models/configs/module/loss/: focal_loss.yaml
src/radiocovid/models/configs/module/metric/: fbeta_score.yaml
src/radiocovid/models/configs/profiler/: simple.yaml
src/radiocovid/models/configs/tuner/: optuna.yaml
src/radiocovid/models/losses/: focal_loss.py
src/radiocovid/models/models/: __init__.py  lightning_module.py
src/radiocovid/models/models/nets/: cnn.py
src/radiocovid/models/utils/: __init__.py  instantiators.py  rich_utils.py  utils.py
src/streamlit/: app.py
src/visualization/: __init__.py
(+6 files in other folders)
