[build-system]
build-backend = "uv_build"

requires = ["uv_build>=0.9.28,<0.10.0"]
[project]
name = "radiocovid"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "joblib>=1.5.3",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "hydra-core>=1.3.2",
    "lightning==2.5.1.post0",
    "torch~=2.6.0",
    "tqdm>=4.67.1",
    "torchmetrics>=1.7.4",
    "torchinfo>=1.8.0",
    "python-dotenv>=1.1.1",
    "wandb>=0.21.0",
    "numpy>=1.26.4",
    "tensorboardx>=2.6.4",
    "tensorboard>=2.20.0",
    "hydra-optuna-sweeper>=1.2.0",
    "hydra-colorlog>=1.2.0",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "scikit-image>=0.25.2",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "seaborn>=0.13.2",
]

xla = ["libtpu==0.0.7.1", "torch-xla~=2.6.0"]

[[tool.uv.index]]
name = "libtpu-wheels"
url = "https://storage.googleapis.com/libtpu-wheels/index.html"
explicit = true
format = "flat"

[tool.uv.sources]
libtpu = { index = "libtpu-wheels" }

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
