[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.28,<0.10.0"]

[dependency-groups]
dev = ["ipykernel>=7.1.0"]
lint = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
]
typing = ["mypy>=1.19.1"]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.0.0",
]

[project]
name = "radiocovid-app"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "streamlit>=1.40",
    "httpx>=0.27",
    "pillow>=11.0.0",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "matplotlib>=3.9",
    "seaborn>=0.13.2",
    "pyyaml>=6.0",
    "radiocovid-utils",
]

[project.scripts]
radiocovid-app = "radiocovid.app.cli:main"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.uv.build-backend]
namespace = true
module-name = "radiocovid.app"

[tool.uv.sources]
radiocovid-utils = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
