[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.28,<0.10.0"]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.0.0",
]

[project]
name = "radiocovid-inference"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch~=2.6.0",
    "torchvision>=0.21.0",
    "pillow>=11.0.0",
    "wandb>=0.21.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
