[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.28,<0.10.0"]

[dependency-groups]
lint = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
]
typing = ["mypy>=1.19.1"]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.0.0",
]

[project]
name = "radiocovid-utils"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "lightning-utilities>=0.11",
]

[project.optional-dependencies]
ml = [
    "torch~=2.6.0",
    "numpy>=1.26.4",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "lightning==2.5.1.post0",
    "rich<14.1",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.1.1",
    "wandb>=0.21.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.build-backend]
namespace = true
module-name = "radiocovid.utils"
